--- a/deployments/blog/templates/docker-compose.yml
+++ b/deployments/blog/templates/docker-compose.yml
@@ -9,13 +9,11 @@ services:
       default: # Connect to the default network as well (optional, depending on your setup)
     deploy: # Deployment configuration for Docker Swarm
       update_config:
-        parallelism: 1 # Update one replica at a time to ensure stability
-        delay: 10s # Wait 10 seconds between updating replicas to avoid downtime
         order: start-first # Start new containers before stopping old ones for seamless updates
       placement:
         constraints: [node.role == worker] # Ensure the service only runs on worker nodes
       mode: replicated # Use replicated mode to run multiple instances of the service
-      replicas: 2 # Run 2 replicas of the service for high availability
+      replicas: 2 # Run 1 replica of the service
       labels: # Traefik and custom labels for the service
         - "traefik.enable=true" # Enable Traefik for this service
         - "traefik.http.routers.blog.entrypoints=web" # Define the HTTP entry point for the router
