fix: Configure Gitea to be online
I noticed that profile pictures were not using gravatars this is due to gitea being offline by default.

- updated the compose file to pass environment variable to set online mode = true

--- a/deployments/gitea/templates/docker-compose.yml
+++ b/deployments/gitea/templates/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       # Sets the SSH domain for repository URLs. This helps Gitea generate correct SSH URLs.
       - SSH_LISTEN_PORT=2222
       # Configures the internal port that Gitea's SSH service listens on.
+      - GITEA__server__OFFLINE_MODE=false
+      # Disables offline mode to allow Gitea to access external resources, such as updates and integrations.
 
     restart: always
     # Ensures the container automatically restarts if it stops unexpectedly.
